--- a/SimpleBank/QuerySource.resx
+++ b/SimpleBank/QuerySource.resx
@@ -167,4 +167,8 @@ VALUES (@firstname, @lastname, @middlename, @dateofbirth)</value>
       table_name = @tableName
    );</value>
   </data>
+  <data name="InsertTransaction" xml:space="preserve">
+    <value>INSERT INTO public.transactions(period, direction, accountid, amount)
+	VALUES (@period, @direction, @accountid, @amount)</value>
+  </data>
 </root>
